tests: migrate various tests to assertj
Also minor code beautifications and fix warnings